# simple_raytracer

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
core/include/: camera.h  color.h  dielectric.h  hittable.h  hittable_list.h  interval.h  lambertian.h  material.h  metal.h  ray.h  simplert.h  sphere.h  utils.h  vec3.h
core/src/: camera.cpp  color.cpp  dielectric.cpp  hittable_list.cpp  lambertian.cpp  material.cpp  metal.cpp  sphere.cpp
